# ComfyUI-BerniniR

./: .comfyignore  .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
bernini/: __init__.py  constants.py  guidance.py  latents.py  loader.py  model.py  native_guider.py  native_nodes.py  native_patches.py  rope.py  sampler.py
modal/: app.py
tests/: test_fidelity_anchor.py  test_wiring.py
tools/: bernini_fp8_model_card.md  convert_bernini_to_comfy.py  fp8_to_bf16.py  save_fp8_diffusers.py
web/: berninir.js
workflows/: bernini_i2i.json  bernini_r2v.json  bernini_rv2v.json  bernini_t2i.json  bernini_t2v.json  bernini_v2v.json
workflows/ui/: bernini_i2i.json  bernini_i2i_1.3B.json  bernini_i2i_gguf_dual.json  bernini_i2i_native_guider.json  bernini_i2i_native_single.json  bernini_rv2v_1.3B.json  bernini_rv2v_gguf_dual.json  bernini_t2v.json  bernini_t2v_1.3B.json  bernini_t2v_gguf_dual.json  bernini_v2v_1.3B.json  bernini_v2v_gguf_dual.json
