[project]
name = "comfyui-berninir"
description = "ByteDance Bernini-R (Wan2.2-T2V-A14B + source-id RoPE + APG multi-condition guidance) for ComfyUI: t2v/t2i, image & video editing, reference-to-video."
version = "0.4.4"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.35.2",
    "transformers>=4.49.0",
    "accelerate>=0.34.2",
    "einops>=0.7.0",
    "ftfy>=6.1.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "av>=11.0.0",
]

[project.urls]
# TODO: reemplaza <OWNER> por tu usuario/org real de GitHub (donde vive el repo
# con el workflow de publicación). Debe ser una URL válida para el registry.
Repository = "https://github.com/neuregex/ComfyUI-BerniniR"
"Upstream model" = "https://huggingface.co/ByteDance/Bernini-R"
"Upstream code" = "https://github.com/bytedance/Bernini"

[tool.comfy]
# TODO: pega tu Publisher ID = el texto DESPUÉS de la @ en tu perfil de
# registry.comfy.org (p.ej. perfil "@tuid" -> PublisherId = "tuid"). Inmutable.
PublisherId = "neuregex"
DisplayName = "ComfyUI-BerniniR"
# Opcional: URL o ruta a un icono (SVG/PNG/JPG/GIF, máx. 800x400px).
Icon = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib: importa cada archivo de test por ruta, sin manipular sys.path ni
# tratar la raíz del repo (que tiene __init__.py de custom node) como paquete.
addopts = "--import-mode=importlib"
